Management upload document JS fix; form layout
Fixes an issue with the confirmation strings when files are uploaded to
the Management module; corrects form layout issues with confirmation
messages and checkbox labels.

--- a/css/style.css
+++ b/css/style.css
@@ -944,7 +944,7 @@ input[type="radio"] {
 }
 
 .form-grid label:not(:is(.checkbox label)),
-.form-grid .checkbox {
+.form-grid p.checkbox {
   margin-block-start: 1rem;
 }
 
